# mnist-ensemble-benchmark

./: .gitignore  README.md  pyproject.toml
src/mnist_benchmark/: __init__.py  __main__.py  cli.py  data.py  experiment.py
tests/: test_data.py
