[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-ensemble-benchmark"
version = "1.0.0"
description = "A reproducible benchmark of tree-based models for MNIST digit classification."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3,<2",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pandas>=2.1,<3",
    "scikit-learn>=1.4,<2",
    "xgboost>=2.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.6,<1",
]

[project.scripts]
mnist-benchmark = "mnist_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
